--- a/kvm/roles/storage/tasks/pool_define.yml
+++ b/kvm/roles/storage/tasks/pool_define.yml
@@ -3,7 +3,7 @@
   virt_pool:
     command: define
     name: '{{ outer_item }}'
-    xml: '{{ lookup("template", "storage/{{ outer_item }}.xml.j2") }}'
+    xml: '{{ lookup("template", "templates/{{ outer_item }}.xml.j2") }}'
 
 - name: pool start
   virt_pool:
