--- a/kvm/roles/guest/tasks/main.yml
+++ b/kvm/roles/guest/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
-- include_tasks: roles/guest/tasks/virt_start.yml
+#- include_tasks: roles/guest/tasks/virt_install.yml
+- include_tasks: roles/guest/tasks/cumulus.yml
   loop: '{{ pool_list }}'
   loop_control:
     loop_var: outer_item
